# aiobot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  act.mk  main.py  pyproject.toml
.github/workflows/: deploy-aws.yml
src/: __init__.py  app.py  assistant.py  constants.py  logger.py
src/api/: __init__.py  events.py  weather.py
src/static/: style.css
src/ui/: __init__.py  interface.py
